packages/react/src/components/Modal/Modal.css
.h-ModalScroll {
  display: flex;
  overflow: auto;
  position: absolute;
  inset: 0;
}

.h-ModalScrollPadding {
  flex-grow: 1;
  margin: auto;
  padding: var(--h-space-400) var(--h-space-200);
}

.h-Modal {
  background-color: var(--h-surface-neutral-strong);
  position: fixed;
  left: 0;
  right: 0;
  bottom: 0;
  border-top-left-radius: var(--h-modal-border-radius);
  border-top-right-radius: var(--h-modal-border-radius);
  height: fit-content;
  min-width: 0;
  overflow: hidden;

  @media (--h-tablet) {
    position: relative;
    top: 50%;
    left: 50%;
    transform: translateX(-50%);
    border-bottom-left-radius: var(--h-modal-border-radius);
    border-bottom-right-radius: var(--h-modal-border-radius);
    width: var(--h-modal-width-tablet);
  }

  @media (--h-desktop) {
    width: var(--h-modal-width-desktop);
  }

  &:where([data-contains-image], [data-full-screen]) {
    --h-modal-max-height-on-mobile: calc(100vh - 40px);

    height: var(--h-modal-max-height-on-mobile);

    @media (--h-tablet) {
      height: fit-content;
    }
  }

  & :where(.h-ModalOuterContainer) {
    &::-webkit-scrollbar {
      display: none;
    }

    position: relative;
    height: 100%;
    display: flex;
    flex-direction: column;
    gap: var(--h-modal-content-gap);
    overflow: auto;
    padding: var(--h-bottom-sheet-padding);

    @media (--h-tablet) {
      padding: var(--h-modal-padding);
    }

    &:where([data-contains-image] &) {
      align-items: center;
      padding: var(--h-modal-padding);

      @media (--h-tablet) {
        height: fit-content;
      }
    }
  }

  & :where(.h-ModalCloseIconButton) {
    position: absolute;
    top: var(--h-modal-padding);
    right: var(--h-modal-padding);
    z-index: 1;
  }

  & :where(.h-ModalInnerContainer) {
    display: flex;
    flex-direction: column;
    gap: var(--h-modal-content-gap);
    justify-content: center;
    height: fit-content;

    &:where([data-contains-image] &) {
      align-items: center;
    }

    @media (--h-tablet) {
      margin-top: auto;
      gap: var(--h-modal-gap);
    }
  }

  & :where(.h-ModalImage) {
    --h-icon-button-size: 1.5rem;
    --h-modal-image-max-size: 120px;

    margin-top: calc(var(--h-icon-button-size) + var(--h-modal-content-gap));
    max-height: var(--h-modal-image-max-size);
    max-width: var(--h-modal-image-max-size);

    @media (--h-tablet) {
      margin-top: var(--h-space-0);
    }

    @media (--h-desktop) {
      --h-modal-image-max-size: 160px;
    }
  }

  & :where(.h-ModalHeader) {
    display: flex;
    flex-direction: column;
    gap: var(--h-modal-content-gap);
    align-items: start;
    text-align: center;

    @media (--h-tablet) {
      text-align: left;
    }

    &:not([data-contains-image] &, [data-hide-close-button] &) :where(.h-Heading) {
      --h-close-button-visual-size: 16px;

      margin-right: calc(var(--h-close-button-visual-size) + var(--h-modal-padding));
    }

    &:where([data-contains-image] &) {
      align-items: center;
    }

    & :where(.h-BodyText) {
      text-align: left;

      &:where([data-contains-image] &) {
        text-align: center;
      }
    }
  }

  & :where(.h-ModalContent) {
    display: flex;
    width: 100%;

    &:where([data-contains-image] &) {
      margin-top: auto;
    }

    & :where(.h-ModalContentScrollAreaRoot) {
      width: 100%;
      height: 100%;
    }

    & :where(.h-ModalContentScrollAreaViewport) {
      width: 100%;
      height: 100%;

      &:where([data-contains-image] &) {
        --h-modal-content-multiplier: 0.5; /* percentage of available height */

        max-height: calc(var(--h-modal-max-height-on-mobile) * var(--h-modal-content-multiplier));
      }
    }
  }

  & :where(.h-ModalFooter) {
    display: flex;
    gap: var(--h-modal-action-gap);
    flex-direction: column-reverse;
    width: 100%;
    margin-top: calc(var(--h-modal-gap) - var(--h-modal-content-gap));

    @media (--h-tablet) {
      flex-direction: row;
      justify-content: end;
    }

    &:where([data-contains-image] &) {
      justify-content: center;

      &:not(.h-ModalOuterContainer:has(.h-ModalContent) &) {
        padding: var(--h-bottom-sheet-padding);
        position: absolute;
        bottom: 0;

        @media (--h-tablet) {
          position: static;
          padding: var(--h-space-0);
        }
      }
    }
  }
}

@media (prefers-reduced-motion: no-preference) {
  @keyframes h-modal-slide-up {
    from {
      opacity: 0;
      transform: translateY(50%);
    }

    to {
      opacity: 1;
      transform: translateY(0);
    }
  }

  @keyframes h-modal-slide-down {
    from {
      opacity: 1;
      transform: translateY(0);
    }

    to {
      opacity: 0;
      transform: translateY(50%);
    }
  }

  @keyframes h-modal-show {
    from {
      transform: translateX(-50%);
    }

    to {
      transform: translateX(-50%);
    }
  }

  @keyframes h-modal-hide {
    from {
      transform: translateX(-50%);
    }

    to {
      transform: translateX(-50%);
    }
  }

  .h-Modal {
    will-change: transform;

    &:where([data-state='open']) {
      animation: h-modal-slide-up 100ms ease-out;
    }

    &:where([data-state='closed']) {
      animation: h-modal-slide-down 100ms ease-in;
    }

    @media (--h-tablet) {
      &:where([data-state='open']) {
        animation: h-modal-show 200ms ease-out;
      }

      &:where([data-state='closed']) {
        animation: h-modal-hide 100ms ease-in;
      }
    }
  }
}

